welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: unclosed string literal
	"var n = nums.length;
        ^